<resources>
    <string name="app_name">Practicum</string>

    <string name="action_sign_out">გამოსვლა</string>
    <string name="txt_toolbar">Toolbar</string>
    <string name="txt_floating_action_button">FloatActionButton</string>
    <string name="txt_navigation_view">NavigationView</string>
    <string name="txt_other">სხვა</string>
    <string name="txt_wut">WUT</string>
    <string name="drawer_close">უჯრის დახურვა</string>
    <string name="drawer_open">უჯრის გახსნა</string>
    <string name="content_description_nav_header">უნივერსიტეტების ლოგო</string>
    <string name="sample_nav_drawer_user_email">gpetr12@freeuni.edu.ge</string>
    <string name="nav_item_name_main">მთავარი</string>
    <string name="content_description_toolbar_header">საბანაკო ადგილის სურათი</string>
    <string name="hint_username">e-mail</string>
    <string name="hint_password">პაროლი</string>
    <string name="title_activity_about">ჩვენს შესახებ</string>
    <string name="about_us_title">ჩვენ შესახებ</string>
    <string name="description_app_logo">აპლიკაციის ლოგო</string>
    <string name="student_desc">სტუდენტი</string>
    <string name="location_desc">საველე პრაქტიკის დანიშნულების ადგილი</string>
    <string name="default_student_name">გია ბაჯვახი</string>
    <string name="default_student_location">ლაგოდეხის დაცული ტერიტორიები (ადმინისტრაციის ეზო, ადმინიტრაციის უკან)</string>
    <string name="wave_desc">ნაკადი</string>
    <string name="departure_date_title">გასვლის თარიღი</string>
    <string name="group_leader_title">კოორდინატორი</string>
    <string name="default_group_leader_name">იაგო ჯაფარი</string>
    <string name="codex_ethics_title">ეთიკის კოდექსი</string>
    <string name="group_size_title">ნაკადში მონაწილე სტუდენტთა რაოდენობა</string>
    <string name="flat_surface_title">სწორი საფარი კარვების მოსაწყობად</string>
    <string name="affirmative_exists">არის</string>
    <string name="lavatory_title">საპირფარეშო</string>
    <string name="negative_not_exists">არ არის</string>
    <string name="shower_title">აბაზანა (დუში)</string>
    <string name="average_temperature_title">საშუალო ტემპერატურა</string>
    <string name="inventory_info_title">რა უნდა წამოიღოთ</string>
    <string name="additional_notes_title">დამატებითი ინფორმაცია</string>
    <string name="no_additional_notes">არაფერი</string>
</resources>
